--- a/faster_lio/src/faster-lio/config/KITTI.yaml
+++ b/faster_lio/src/faster-lio/config/KITTI.yaml
@@ -2,13 +2,15 @@ common:
   dataset: "nclt"
   # lid_topic: "points_raw"
   # imu_topic: "imu_raw"
-  lid_topic: "/kitti/velo/pointcloud"
-  imu_topic: "/kitti/oxts/imu"
+  # lid_topic: "/kitti/velo/pointcloud"
+  # imu_topic: "/kitti/oxts/imu"
+  lid_topic: "/velodyne_points"
+  imu_topic: "/handsfree/imu"
   time_sync_en: false         # ONLY turn on when external time synchronization is really not possible
 
 preprocess:
   lidar_type: 2                # 1 for Livox serials LiDAR, 2 for Velodyne LiDAR, 3 for ouster LiDAR,
-  scan_line: 64
+  scan_line: 32
   blind: 4
   time_scale: 1e-3             # 兼容不同数据集的时间单位，仅对Velodyne LiDAR(lidar_type=2)生效
 
@@ -20,7 +22,7 @@ mapping:
   fov_degree: 180
   det_range: 100.0
   extrinsic_est_en: true      # true: enable the online estimation of IMU-LiDAR extrinsic
-  extrinsic_T: [ 0, 0, 0.28 ]
+  extrinsic_T: [0.81, -0.32, 0.8]
   extrinsic_R: [ 1, 0, 0,
                  0, 1, 0,
                  0, 0, 1 ]
