--- a/VoxelMap/src/VoxelMap/CMakeLists.txt
+++ b/VoxelMap/src/VoxelMap/CMakeLists.txt
@@ -47,7 +47,6 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   pcl_ros
   tf
-  livox_ros_driver
   message_generation
   eigen_conversions
 )
@@ -66,7 +65,9 @@ include_directories(
   ${EIGEN3_INCLUDE_DIR}
   ${PCL_INCLUDE_DIRS}
   ${PYTHON_INCLUDE_DIRS}
-  include)
+  include
+  3rdparty
+)
 
 add_message_files(
   FILES
