--- a/ig_lio/src/ig_lio/CMakeLists.txt
+++ b/ig_lio/src/ig_lio/CMakeLists.txt
@@ -17,7 +17,6 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   roslib
   pcl_ros
-  livox_ros_driver
 )
 
 ## System dependencies are found with CMake's conventions
@@ -40,6 +39,7 @@ catkin_package(
 
 include_directories(
   include 
+  3rdparty
 )
 
 include_directories(SYSTEM
