--- a/faster_lio/src/faster-lio/config/velodyne_liosam.yaml
+++ b/faster_lio/src/faster-lio/config/velodyne_liosam.yaml
@@ -1,12 +1,14 @@
 common:
     dataset: "liosam"
-    lid_topic:  "points_raw"
-    imu_topic:  "imu_correct"
+    # lid_topic:  "points_raw"
+    # imu_topic:  "imu_correct"
+    lid_topic: "/velodyne_points"
+    imu_topic: "/handsfree/imu"
     time_sync_en: false         # ONLY turn on when external time synchronization is really not possible
     
 preprocess:
     lidar_type: 2                # 1 for Livox serials LiDAR, 2 for Velodyne LiDAR, 3 for ouster LiDAR, 
-    scan_line: 16
+    scan_line: 32
     blind: 4
     time_scale: 1e3             # 兼容不同数据集的时间单位
 
@@ -18,7 +20,7 @@ mapping:
     fov_degree:    180
     det_range:     100.0
     extrinsic_est_en:  true      # true: enable the online estimation of IMU-LiDAR extrinsic
-    extrinsic_T: [ 0, 0, 0]
+    extrinsic_T: [ 0.29, 0, 0.84]
     extrinsic_R: [ 1, 0, 0, 
                    0, 1, 0, 
                    0, 0, 1]
