--- a/VoxelMap/src/VoxelMap/config/velodyne.yaml
+++ b/VoxelMap/src/VoxelMap/config/velodyne.yaml
@@ -33,10 +33,10 @@ imu:
                    0, 0, 1]
 
 visualization:
-    pub_voxel_map: true
+    pub_voxel_map: false
     publish_max_voxel_layer: 1         # only publish 0,1,2 layer's plane
     pub_point_cloud: true
-    dense_map_enable: true
+    dense_map_enable: false
     pub_point_cloud_skip: 5             # publish one points per five points
 
 Result:
