--- a/lio_sam/src/LIO-SAM/config/KITTI.yaml
+++ b/lio_sam/src/LIO-SAM/config/KITTI.yaml
@@ -1,16 +1,8 @@
 lio_sam:
 
-
-  # pc_topic_vec: ["/points_raw"]
-  # imu_topic_vec: ["/imu_raw"]
-  # # pc_topic_vec: ["/kitti/velo/pointcloud"]
-  # # imu_topic_vec: ["/kitti/oxts/imu"]
-
   # Topics
-  pointCloudTopic: "/points_raw"               # Point cloud data
-  imuTopic: "/imu_raw"                         # IMU data
-
-
+  pointCloudTopic: "/kitti/velo/pointcloud"               # Point cloud data
+  imuTopic: "/kitti/oxts/imu"                         # IMU data,imu_raw for kitti,imu_correct for campus
   odomTopic: "odometry/imu"                   # IMU pre-preintegration odometry, same frequency as IMU
   gpsTopic: "odometry/gpsz"                   # GPS odometry topic from navsat, see module_navsat.launch file
 
@@ -21,9 +13,9 @@ lio_sam:
   mapFrame: "map"
 
   # GPS Settings
-  useImuHeadingInitialization: false           # if using GPS data, set to "true"
+  useImuHeadingInitialization: true           # if using GPS data, set to "true"
   useGpsElevation: false                      # if GPS elevation is bad, set to "false"
-  gpsCovThreshold: 2.0                        # m^2, threshold for using GPS data
+  gpsCovThreshold: 1.0                        # m^2, threshold for using GPS data
   poseCovThreshold: 25.0                      # m^2, threshold for using GPS data
   
   # Export settings
@@ -31,10 +23,10 @@ lio_sam:
   savePCDDirectory: "/Downloads/LOAM/"        # in your home folder, starts and ends with "/". Warning: the code deletes "LOAM" folder then recreates it. See "mapOptimization" for implementation
 
   # Sensor Settings
-  sensor: velodyne                            # lidar sensor type, 'velodyne' or 'ouster' or 'livox'
-  N_SCAN: 32                                  # number of lidar channel (i.e., Velodyne/Ouster: 16, 32, 64, 128, Livox Horizon: 6)
-  Horizon_SCAN: 1800                          # lidar horizontal resolution (Velodyne:1800, Ouster:512,1024,2048, Livox Horizon: 4000)
-  downsampleRate: 3                           # default: 1. Downsample your data if too many points. i.e., 16 = 64 / 4, 16 = 16 / 1
+  sensor: velodyne                            # lidar sensor type, either 'velodyne' or 'ouster'
+  N_SCAN: 64                                 # number of lidar channel (i.e., 16, 32, 64, 128)
+  Horizon_SCAN: 1800                          # lidar horizontal resolution (Velodyne:1800, Ouster:512,1024,2048)
+  downsampleRate: 4                           # default: 1. Downsample your data if too many points. i.e., 16 = 64 / 4, 16 = 16 / 1
   lidarMinRange: 1.0                          # default: 1.0, minimum lidar range to be used
   lidarMaxRange: 1000.0                       # default: 1000.0, maximum lidar range to be used
 
@@ -45,22 +37,12 @@ lio_sam:
   imuGyrBiasN: 3.5640318696367613e-05
   imuGravity: 9.80511
   imuRPYWeight: 0.01
+  imuRate: 100.0
 
-  # Extrinsics: T_lb (lidar -> imu)
-  # extrinsicTrans: [0.0, 0.0, 0.0]
-  extrinsicTrans: [0.81, -0.32, 0.8]
-  extrinsicRot: [ 1, 0, 0,
-                  0, 1, 0,
-                  0, 0, 1]
-  extrinsicRPY: [ 1, 0, 0,
-                  0, 1, 0,
-                  0, 0, 1]
-  # extrinsicRot: [1, 0, 0,
-  #                 0, 1, 0,
-  #                 0, 0, 1]
-  # extrinsicRPY: [1, 0, 0,
-  #                 0, 1, 0,
-  #                 0, 0, 1]
+
+  extrinsicTrans: [-8.086759e-01, 3.195559e-01, -7.997231e-01]
+  extrinsicRot: [9.999976e-01, 7.553071e-04, -2.035826e-03, -7.854027e-04, 9.998898e-01, -1.482298e-02, 2.024406e-03, 1.482454e-02, 9.998881e-01]
+  extrinsicRPY: [9.999976e-01, 7.553071e-04, -2.035826e-03, -7.854027e-04, 9.998898e-01, -1.482298e-02, 2.024406e-03, 1.482454e-02, 9.998881e-01]
 
   # LOAM feature threshold
   edgeThreshold: 1.0
@@ -78,31 +60,29 @@ lio_sam:
   rotation_tollerance: 1000                     # radians
 
   # CPU Params
-  numberOfCores: 16                             # number of cores for mapping optimization
-  mappingProcessInterval: 0.01                  # seconds, regulate mapping frequency
+  numberOfCores: 16                              # LiDAR里程计使用的线程数，建议设置为CPU线程的最大值!!!!
+  mappingProcessInterval: 0.15                  # seconds, regulate mapping frequency 
 
   # Surrounding map
+  enable_keyframe: true
   surroundingkeyframeAddingDistThreshold: 1.0   # meters, regulate keyframe adding threshold
   surroundingkeyframeAddingAngleThreshold: 0.2  # radians, regulate keyframe adding threshold
-  surroundingKeyframeDensity: 2.0               # meters, downsample surrounding keyframe poses   
-  surroundingKeyframeSearchRadius: 50.0         # meters, within n meters scan-to-map optimization (when loop closure disabled)
-
+  surroundingKeyframeDensity: 2.0               # meters, 对历史的keyframe根据pose进行下采样，仅在启用回环时才有效，目的是防止半径搜索出太多邻近帧
+                                                # 该下采样不影响倒数几帧的候选。  
+  surroundingKeyframeSearchRadius: 50.0         # meters, 1. 启用回环时的过去帧查询范围 2. 过滤离上一帧太远的关键帧
   # Loop closure
   loopClosureEnableFlag: true
   loopClosureFrequency: 1.0                     # Hz, regulate loop closure constraint add frequency
-  surroundingKeyframeSize: 50                   # submap size (when loop closure enabled)
-  historyKeyframeSearchRadius: 15.0             # meters, key frame that is within n meters from current pose will be considerd for loop closure
-  historyKeyframeSearchTimeDiff: 30.0           # seconds, key frame that is n seconds older will be considered for loop closure
-  historyKeyframeSearchNum: 25                  # number of hostory key frames will be fused into a submap for loop closure
-  historyKeyframeFitnessScore: 0.3              # icp threshold, the smaller the better alignment
+  surroundingKeyframeSize: 50                   # submap size (when loop closure enabled)->实际上上没有使用到
+  historyKeyframeSearchRadius: 50.0             # meters, kd树的搜索半径
+  historyKeyframeSearchTimeDiff: 30.0           # seconds, n秒内的keyframe不考虑
+  historyKeyframeSearchNum: 25                   # kd树找到的中心帧的前后n帧会被考虑，参与构建loop的局部地图
+  historyKeyframeFitnessScore: 1.0              # 匹配阈值, the smaller the better alignment
 
   # Visualization
   globalMapVisualizationSearchRadius: 1000.0    # meters, global map visualization radius
   globalMapVisualizationPoseDensity: 10.0       # meters, global map visualization keyframe density
-  globalMapVisualizationLeafSize: 1.0           # meters, global map visualization cloud density
-
-
-
+  globalMapVisualizationLeafSize: 1.0           # meters, global map visualization cloud density,按需设计，过大地图稀疏，过小显卡压力大
 
 # Navsat (convert GPS coordinates to Cartesian)
 navsat:
