--- a/ig_lio/src/ig_lio/config/avia.yaml
+++ b/ig_lio/src/ig_lio/config/avia.yaml
@@ -1,5 +1,5 @@
-lidar_topic: /livox/lidar_192_168_1_150
-imu_topic: /livox/imu_192_168_1_150
+lidar_topic: /livox/lidar
+imu_topic: /livox/imu
 lidar_type: livox # livox velodyne ouster
 min_radius: 0.5
 max_radius: 150.0
