uploaded the parameter files used for the comparative experiment

--- a/PV_LIO/src/PV-LIO/config/nclt.yaml
+++ b/PV_LIO/src/PV-LIO/config/nclt.yaml
@@ -1,10 +1,10 @@
 common:
-    lid_topic:  "/velodyne_points"
-    imu_topic:  "/handsfree/imu"
+    lid_topic:  "/points_raw"
+    imu_topic:  "/imu_raw"
     time_sync_en: false         # ONLY turn on when external time synchronization is really not possible
 
 preprocess:
-    lidar_type: 2                # 1 for Livox serials LiDAR, 2 for Velodyne LiDAR, 3 for ouster LiDAR,
+    lidar_type: 5                # 1 for Livox serials LiDAR, 2 for Velodyne LiDAR, 3 for ouster LiDAR,
     scan_line: 32
     scan_rate: 10                # only need to be set for velodyne, unit: Hz,
     blind: 1
@@ -23,7 +23,7 @@ mapping:
     fov_degree:    360
     det_range:     100.0
     extrinsic_est_en:  true      # true: enable the online estimation of IMU-LiDAR extrinsic,
-    extrinsic_T: [ 0.29, 0, 0.84 ]
+    extrinsic_T: [ 0, 0, 0.28 ]
     extrinsic_R: [ 1,  0,  0,
                     0,  1,  0,
                     0,  0,  1 ]
