--- a/PV_LIO/src/PV-LIO/config/mid360.yaml
+++ b/PV_LIO/src/PV-LIO/config/mid360.yaml
@@ -1,20 +1,20 @@
 common:
-    lid_topic:  "/hesai_front/pandar"
-    imu_topic:  "/imu/data"
+    lid_topic:  "/livox/lidar_192_168_1_101"
+    imu_topic:  "/livox/imu_192_168_1_101"
     time_sync_en: false         # ONLY turn on when external time synchronization is really not possible
-    
+
 preprocess:
-    lidar_type: 4                # 1 for Livox serials LiDAR, 2 for Velodyne LiDAR, 3 for ouster LiDAR, 
-    scan_line: 16
-    scan_rate: 10                # only need to be set for velodyne, unit: Hz,
-    blind: 1
-    point_filter_num: 3
+    lidar_type: 1                # 1 for Livox serials LiDAR, 2 for Velodyne LiDAR, 3 for ouster LiDAR,
+    scan_line: 6
+    scan_rate: 10
+    blind: 0.5
+    point_filter_num: 1
 
 mapping:
-    down_sample_size: 0.2
+    down_sample_size: 0.4
     max_iteration: 4
-    voxel_size: 0.25
-    max_layer: 2                # 4 layer, 0, 1, 2, 3
+    voxel_size: 2.0
+    max_layer: 4                # 4 layer, 0, 1, 2, 3
     layer_point_size: [ 5, 5, 5, 5, 5 ]
     plannar_threshold: 0.01
     max_points_size: 1000
@@ -23,14 +23,14 @@ mapping:
     fov_degree:    360
     det_range:     100.0
     extrinsic_est_en:  false      # true: enable the online estimation of IMU-LiDAR extrinsic,
-    extrinsic_T: [0, 0, 0.2]
-    extrinsic_R: [ 1, 0, 0, 
-                   0, 1, 0, 
+    extrinsic_T: [ -0.011, -0.02329, 0.04412 ]
+    extrinsic_R: [ 1, 0, 0,
+                   0, 1, 0,
                    0, 0, 1]
 
 noise_model:
-    ranging_cov: 0.01
-    angle_cov: 0.1
+    ranging_cov: 0.02
+    angle_cov: 0.05
     acc_cov: 0.5
     gyr_cov: 0.25
     b_acc_cov: 0.0043
